k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-library-ingress
  namespace: mern-library-ns
spec:
  rules:
    - host: mern-library.local
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
